
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 int exit (int) ;
 int printf (char*,...) ;
 int read (int ,char*,int) ;
 int sock ;

void xp_receive()
{
 int tmp;
 char buffer[1024*2];

 if ( (tmp = read(sock, buffer, sizeof(buffer))) <= 0)
 {
  printf("read() failed\n");
  exit(-1);
 }
 printf("%s", buffer);
}
