; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_24182.c_xp_receive.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_24182.c_xp_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"read() failed\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xp_receive() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [2048 x i8], align 16
  %3 = load i32, i32* @sock, align 4
  %4 = getelementptr inbounds [2048 x i8], [2048 x i8]* %2, i64 0, i64 0
  %5 = call i32 @read(i32 %3, i8* %4, i32 2048)
  store i32 %5, i32* %1, align 4
  %6 = icmp sle i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @exit(i32 -1) #3
  unreachable

10:                                               ; preds = %0
  %11 = getelementptr inbounds [2048 x i8], [2048 x i8]* %2, i64 0, i64 0
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  ret void
}

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
